chairs button added fixed spacing on text

--- a/frontend/src/components/Chairs/chair.css
+++ b/frontend/src/components/Chairs/chair.css
@@ -5,6 +5,10 @@
     align-items: center;
 }
 
+p {
+    margin: 5px;
+}
+
 .chairDiv {
     display: flex;
     justify-content: flex-start;
